# read-chinese

./: '  .editorconfig  .eslintrc.js  .gitignore  LICENSE  README.md  TODO.md  ]  app.go  appveyor.yml  db.sqlite3  electron-builder.json5  ex.fmt.json  ex.json  go.mod  go.sum  index.html  jq  knexfile.js  knexfile.mjs  knexfile.ts  lint-staged.config.js  main.go  package.json  tailwind.config.js  test.foo  test.js  test.ts  tsconfig.json  tsconfig.node.json  tsconfig.t1huvt41pbe.json  vite.config.ts  vue.config.js  wails.json
backend/: aiGenerator.go  ankiInterface.go  ankiInterface_test.go  bookLibrary.go  bookLibrary_test.go  calibre.go  calibre_test.go  config.go  database.go  dictionaries.go  dictionaries_test.go  dictionary.go  generateSentences.go  generateSentences_test.go  imageSearch.go  imageSearch_test.go  init.go  init_test.go  knownWords.go  knownWords_test.go  pinyinUtils.go  pinyinUtils_test.go  segmentation.go  segmentation_test.go  templateLoader.go  textToSpeech.go  textToSpeech_test.go  userSettings.go  userSettings_test.go  wordLists.go
dict/: mod.dict.utf8
frontend/: .eslintignore  .eslintrc.js  index.html  lint-staged.config.js  package-lock.json  package.json  package.json.md5  tailwind.config.js  tsconfig.json  vite.config.ts  windi.config.js
migrations/: 20220727224055_create_words_table.js  (+2 more)
src-tauri/: .env  .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/migrations/: 20221025225609_frequency.up.sql  20221025225618_books.up.sql
src-tauri/src/: commands.rs  database.rs  main.rs
src-tauri/src/commands/: book_library.rs
(+276 files in other folders)
